--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
     padding: 0;
  } 
 
-.image {
+img {
     display: block;
     max-width: 100%;
     height: auto;
@@ -311,6 +311,34 @@ body {
      margin-left: 30px;
     
  }
+
+.job .item {
+    position: relative;
+}
+
+.text-subject {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    content: "";
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-weight: 700;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
 
 /*Наша команда*/
 .team {
