--- a/css/styles.css
+++ b/css/styles.css
@@ -124,7 +124,7 @@ img {
 
 .current::after {
   position: absolute;
-  content: " ";
+  content: "";
   display: block;
   width: 100%;
   height: 4px;
@@ -149,6 +149,7 @@ img {
 .mail-tel:hover,
 .mail-tel:focus {
   color: #2196f3;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-email {
@@ -282,7 +283,7 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  /*transition: transform 300ms ease-in-out 200ms, opacity 300ms ease-in-out 200ms;*/
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* початковий стан елемента перед анімацією */
@@ -411,6 +412,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*padding: 27px 85px;*/
 }
 
 /*Наша команда*/
@@ -491,11 +493,13 @@ img {
 .social-link:hover,
 .social-link:focus {
   background-color: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
   fill: #ffffff;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
@@ -535,11 +539,13 @@ img {
 
 .link-client:hover {
   border: 1px solid #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client:hover .icon-client,
 .link-client:focus .icon-client {
   fill: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-client {
@@ -611,6 +617,7 @@ img {
 
 .footer-icon {
   fill: #ffffff;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link {
@@ -626,6 +633,7 @@ img {
 .footer-link:hover,
 .footer-link:focus {
   background-color: #2196f3;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Портфолио*/
@@ -707,13 +715,34 @@ img {
   border: 1px solid #eeeeee;
 }
 
-/*.element {
-    border: 1px solid #EEEEEE;
-    padding-right: 24px;
-    padding-bottom: 20px;
-    padding-top: 20px;
-    padding-left: 24px;
-}*/
+.portfolio-overlay {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery.link:hover .paragraph,
+.gallery.link:focus .paragraph {
+  transform: translateY(0);
+}
+
+.paragraph {
+  position: absolute;
+  font-weight: 400px;
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 63px 24px;
+
+  background-color: rgba(33, 150, 243, 0.9);
+
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .gallery.link {
   display: block;
@@ -722,11 +751,11 @@ img {
   text-decoration: none;
 }
 
-.element .gallery.link:hover,
+/*.element .gallery.link:hover,
 .element .gallery.link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}
+}*/
 
 .progect {
   color: #212121;
