--- a/css/styles.css
+++ b/css/styles.css
@@ -113,6 +113,7 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
   display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-header-nav.link {
@@ -149,7 +150,6 @@ img {
 .mail-tel:hover,
 .mail-tel:focus {
   color: #2196f3;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-email {
@@ -168,6 +168,7 @@ img {
   padding-top: 32px;
   align-items: center;
   text-decoration: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*.item-email {
@@ -243,6 +244,7 @@ img {
   border: 1px;
   padding: 10px 32px;
   margin-top: 30px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
@@ -488,22 +490,22 @@ img {
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: #2196f3;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link:hover .social-icon,
 .social-link:focus .social-icon {
   fill: #ffffff;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-icon {
   fill: #afb1b8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Наши клиенты*/
@@ -535,17 +537,16 @@ img {
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client:hover {
   border: 1px solid #2196f3;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client:hover .icon-client,
 .link-client:focus .icon-client {
   fill: #2196f3;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-client {
