--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,8 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.3);
 
-  /*transition: opacity var(--fast-anim), visibility var(--fast-anim);*/
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-hidden {
@@ -314,7 +315,6 @@ img {
   background-color: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  /*background-color: transparent;*/
 
   cursor: pointer;
 }
@@ -537,7 +537,8 @@ img {
   height: 92px;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-client:hover {
@@ -618,7 +619,6 @@ img {
 
 .footer-icon {
   fill: #ffffff;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link {
@@ -629,12 +629,12 @@ img {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-link:hover,
 .footer-link:focus {
   background-color: #2196f3;
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*Портфолио*/
@@ -664,15 +664,17 @@ img {
   padding-bottom: 6px;
   padding-left: 22px;
   padding-right: 22px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-navigation:hover,
 .button-navigation:focus {
-  background: #2196f3;
   color: #ffffff;
+  background-color: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
 }
 
 .list-navigation .li-navigation:not(:last-child) {
@@ -750,13 +752,14 @@ img {
   margin-top: 0px;
   display: block;
   text-decoration: none;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-/*.element .gallery.link:hover,
+.element .gallery.link:hover,
 .element .gallery.link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-}*/
+}
 
 .progect {
   color: #212121;
